# pdb-redo-archive-manager

./: .gitignore  CMakeLists.txt  changelog  package.json  pramd.conf  webpack.config.js
docroot/: head.html  index.html  menu.html  search-elements.html  search.html
rsrc/: configuration.json  data.json.schema  db-schema-stage-1.sql  db-schema-stage-2.sql  db-schema.sql  pdb-archive-query-result.json.schema
scss/: pdb-redo-bootstrap.scss
src/: configuration.cpp  configuration.hpp  data-service.cpp  data-service.hpp  db-connection.cpp  db-connection.hpp  json2bson.hpp  pramd.cpp  utilities.cpp  utilities.hpp
webapp/: index.js  lists.js  pdb-redo-bootstrap.scss  search.js
